# test-actions

./: README.md  launchpad_downloader.py  launchpad_release.py  products.json  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: check-new-releases.yaml  ci.yaml
tests/unittest/: test_uploader.py
uploader/: launchpad_downloader.py  launchpad_release.py  services.py  utils.py
